--- a/0. Hello HTML/index.html
+++ b/0. Hello HTML/index.html
@@ -3,4 +3,19 @@
 <!-- TODO 0.2: Add a head with a title. Set the title to your name -->
 
 <!-- TODO 0.3: Add the body with the text "Hello HTML, I am <name>" -->
-    
+
+<!doctype html>
+
+<html lang="en-US">
+
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <title>Jiro Serote</title>
+    </head>
+
+    <body>
+        <p>Hello HTML, I am Jiro</p>
+    </body>
+
+</html>    
