--- a/1. Essential HTML Tags/index.html
+++ b/1. Essential HTML Tags/index.html
@@ -6,23 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- TODO 1.1: Add a title to your website -->
-    
+    <title>Essential HTML Tags</title>
 </head>
 
 <body>
     <!-- TODO 1.2: Add 6 headers from the largest to the smallest -->
 
+    <h1>Header 1</h1>
+    <h2>Header 2</h2>
+    <h3>Header 3</h3>
+    <h4>Header 4</h4>
+    <h5>Header 5</h5>
+    <h6>Header 6</h6>
+
     <!-- TODO 1.3: Add a paragraph. Try making the text italic or bold. -->
 
+    <p>This is a <u>paragraph</u>. It's used for the "body" of the website. It can be formatted in various ways including making text <strong>bold</strong>, <i>italicized</i>, or <u>underlined</u>.</p>
+    <br>
+
     <!-- TODO 1.4: Add a link to your github account -->
+    <p><strong>My GitHub account: </strong><a href="https://github.com/Jisaac5">Jisaac5</a></p>
+    <br>
 
     <!-- TODO 1.5: Add an unordered list with 2 items -->
+    <ul>This is an unordered list!
+        <li>Incredible</li>
+        <li>So unordered!</li>
+    </ul>
+    <br>
 
     <!-- TODO 1.6: Add an ordered list with 3 items -->
+    <ol>And this is an ordered list!
+        <li>I am number one</li>
+        <li>I am second</li>
+        <li>Three</li>
+    </ol>
+
 
     <!-- TODO 1.7: Add an image  -->
+    <p>Still image</p>
+    <img src="https://static.wikia.nocookie.net/chainsaw-man/images/0/08/Power_tells_the_group_she%27s_on_Team_Kill_Denji.png/revision/latest?cb=20230613113842" 
+    width=40% height=40% alt="Image of Denji and Power from Chainsaw Man.">
+
+    <p>Animated image</p>
+    <img src="https://media1.tenor.com/m/kiTCQ9dkCfMAAAAC/chainsaw-man-chainsaw-man-dance.gif" alt="GIF of Denji and Power from Chainsaw Man.">
 
     <!-- TODO 1.8: Group a header and a paragraph in one tag -->
+    <div style="font-family:Georgia">
+        <h2>Grouping test using divs</h2>
+        <p>Small text</p>
+    </div>
+
 </body>
 
 </html>
